clusters/cl01tl/manifests/kube-prometheus-stack/HTTPRoute-kube-prometheus-stack-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: kube-prometheus-stack
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/version: "92.2.0"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-92.2.0
    release: "kube-prometheus-stack"
    heritage: "Helm"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - alertmanager.alexlebens.dev
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          weight: 1
          name: kube-prometheus-stack-alertmanager
          port: 4180
      matches:
        - path:
            type: PathPrefix
            value: /
